feat: fix path process

--- a/plugin/backend/php/thinkphp6-fpm/template/controller.html
+++ b/plugin/backend/php/thinkphp6-fpm/template/controller.html
@@ -17,5 +17,9 @@ namespace {{namespace}};
     }
     {{/constructors}}
     {{#methods}}
+    public function {{name}}() {
+
+    }
+
     {{/methods}}
 }
